--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@adonisjs/core": "^5.9.0",
     "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.11",
+    "axios": "^1.7.7",
     "epayco-sdk-node": "^1.4.0",
     "luxon": "^3.5.0",
     "ms-cinema": "file:",
